﻿[section Changelog]
[no-subsection-numbers]

[section#v1_0_2 Version 1.0.2, 2015-mm-dd]
- replaced all uses of `[url "https://msdn.microsoft.com/en-us/library/hz49h034.aspx" Char.GetUnicodeCategory]` with `[url "https://msdn.microsoft.com/en-us/library/h6sx68ke.aspx" CharCodeInfo.GetUnicodeCategory]`, since the former may or may not track the current Unicode standard and the latter is the only one supported by the PCL API subset
- updated the case folding, whitespace and XID property data tables to Unicode 8.0.0
- added a PCL Profile 259 version to the FParsec NuGet package
- removed the Silverlight, VS9 and VS10 solution files and the Mono Makefile
- updated the Lex & Yacc version of the =FSharpParsingSample= to use the [url "http://fsprojects.github.io/FsLexYacc/" `FsLexYacc`] NuGet packages
[/section]

[section#v1_0_1 Version 1.0.1, 2013-06-25]
- The maintainership of the FParsec NuGet package(s) was handed over from Ryan Riley,
  Huw Simpson, Cameron Taggart and Khan Thompson to Stephan Tolksdorf. Thanks
  Ryan, Huw, Cameron and Khan for creating and maintaining the previous versions of the NuGet package!
- FParsec now has two @NuGet packages@, built with a new fsx script
- fixed a [url "https://bitbucket.org/fparsec/main/pull-request/3/bug-fix-use-the-leaveopen-parameter-passed/diff" bug in one of the `CharStream` constructors] (reported and patched by Andrew Smith -- thanks Andrew!)
- added `USE_STATIC_MAPPING_FOR_IS_ANY_OF` and `UNALIGNED_READS` as default compilation options in the Visual Studio projects (the default options now match the ones used by the "Big Data edition" NuGet package)
- some minor code tweaking / micro-optimizations
- fixed some minor documentation issues
[/section]

[section#v1_0 Version 1.0.0, 2012-07-19]
- disabled code generation in `isAnyOf`, `isNoneOf`, `anyOf`, `skipAnyOf`, `noneOf` and `skipNoneOf` by default (you can reenable it using the new `USE_STATIC_MAPPING_FOR_IS_ANY_OF` compilation option)