@@ -64,7 +64,7 @@
                 <tbody class="nav-before-open n4">
                  <tr class="nav-entry n4 _1">
                   <td class="nav-number n4"></td>
-                  <td class="nav-title n4"><a href="#v1_0_2">Version 1.0.2, 2015‐mm‐dd</a></td>
+                  <td class="nav-title n4"><a href="#v1_0_2">Version 1.0.2, 2015‒09‒27</a></td>
                  </tr>
                  <tr class="nav-entry n4 _2">
                   <td class="nav-number n4"></td>
@@ -208,7 +208,7 @@
  <div class="section s2">
   <h1 class="title h2"><span>Changelog</span></h1>
   <div id="v1_0_2" class="section s3">
-   <h2 class="title h3"><span>Version 1.0.2, 2015‐mm‐dd</span></h2>
+   <h2 class="title h3"><span>Version 1.0.2, 2015‒09‒27</span></h2>
    <div class="intro i3">
     <div class="para _1 lcinp">
      <ul class="l1">
@@ -226,6 +226,7 @@
        updated the Lex &amp; Yacc version of the <span class="tt">FSharpParsingSample</span> to use the <a
        href="http://fsprojects.github.io/FsLexYacc/"><code class="fsharp"><span class="ci">FsLexYacc</span></code></a> NuGet packages
       </li>
+      <li class="_6">fixed documentation typos (two were spotted by Francois Nardon and Patrick McDonald – thanks Francois and Patrick!)</li>
      </ul>
     </div>
    </div>
