@@ -117,7 +117,7 @@
    </div>
    <div class="para _5">
     <p>
-     <span class="i"><strong>Latest release:</strong></span> FParsec 1.0.1, 2013‒06‒25, <a
+     <span class="i"><strong>Latest release:</strong></span> FParsec 1.0.2, 2015‒09‒27, <a
      href="https://bitbucket.org/fparsec/main/get/tip.zip">Download</a>, <a href="download-and-installation.html#nuget-packages">NuGet packages</a>,
      <a href="about/changelog.html">Changes</a>
     </p>
