@@ -23,7 +23,7 @@ FParsec's features include:
 
 FParsec is an F# adaptation of [url "http://www.haskell.org/haskellwiki/Parsec" Parsec], the popular parser combinator library for Haskell by [url "http://research.microsoft.com/en-us/um/people/daan/" Daan Leijen]. While the implementations of Parsec and FParsec are completely different, they share a similar top-level API.
 
-[/ **Latest release:**] FParsec 1.0.1, 2013-06-25, [url "https://bitbucket.org/fparsec/main/get/tip.zip" Download], [^download-and-installation.nuget-packages NuGet packages], [^about.changelog Changes]
+[/ **Latest release:**] FParsec 1.0.2, 2015-09-27, [url "https://bitbucket.org/fparsec/main/get/tip.zip" Download], [^download-and-installation.nuget-packages NuGet packages], [^about.changelog Changes]
 
 [auto-link{
     do-not-pick-up-as-link-targets = [ "ToString"],
